Distance restrictions between consecutive attractor selections
Distance restrictions between consecutive attractor selections
Optional center attractor